name:               aviation-cessna172-diagrams
version:            0.0.2
license:            OtherLicense
license-file:       LICENSE
author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>, Joshua Morris <ɯoɔ˙lᴉɐɯƃ@llǝʞsɐɥ+sᴉɹɹoɯuɥoɾɐnɥsoɾ>
maintainer:         Tony Morris, Joshua Morris
copyright:          Copyright (c) 2017, Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230.
synopsis:           Diagrams for the Cessna 172 aircraft in aviation.
category:           Aviation
description:        
  <<https://raw.githubusercontent.com/qfpl/assets/master/data61-transparent-bg.png>>
  .
  Diagrams for the Cessna 172 aircraft in aviation.

homepage:           https://github.com/data61/aviation-cessna172-diagrams
bug-reports:        https://github.com/data61/aviation-cessna172-diagrams/issues
cabal-version:      >= 1.10
build-type:         Simple
extra-source-files: changelog

source-repository   head
  type:             git
  location:         git@github.com:data61/aviation-cessna172-diagrams.git

library
  default-language:
                    Haskell2010

  build-depends:
                    base
                    , lens >= 4.15 && < 4.18
                    , diagrams-cairo >= 1.4 && < 1.5
                    , diagrams-core >= 1.4 && < 1.5
                    , diagrams-lib >= 1.4 && < 1.5
                    , mtl >= 2.2 && < 2.3
                    , plots >= 0.1 && < 0.2
                    , colour >= 2.3 && < 2.4
                    , hgeometry == 0.10.0.0
                    , hgeometry-combinatorial == 0.10.0.0

  ghc-options:
                    -Wall

  default-extensions:
  
                    NoImplicitPrelude

  hs-source-dirs:
                    src
                    deps/aviation-units/src
                    deps/aviation-weight-balance/src
                    deps/aviation-cessna172-weight-balance/src

  exposed-modules:
                    Data.Aviation.C172.Diagrams
